--- a/CIH2/HelloMechanic_Web/client/admin/index.html
+++ b/CIH2/HelloMechanic_Web/client/admin/index.html
@@ -127,13 +127,16 @@
     }
 
     h1 {
-      font-size: 2.8rem;
-      background: linear-gradient(to right, var(--accent-pink), var(--accent-blue));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
-      margin-bottom: 10px;
-    }
+  font-size: 2.8rem;
+  background: linear-gradient(to right, var(--accent-pink), var(--accent-blue));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text; /* Add this for cross-browser support */
+  display: inline-block;  /* Required for background-clip to work */
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+  margin-bottom: 10px;
+}
+
 
     p {
       font-size: 1.1rem;
